tests/sksl/errors/ReservedNameDvec2.glsl
### Compilation failed:

error: 1: 'dvec2' is a reserved word
int dvec2;
    ^^^^^
1 error
